# timetrackerSite

./: README.md
BackupServer/backup_server/: Cargo.toml
BackupServer/backup_server/src/: main.rs
Specification/: Einleitung und Allgemeine Beschreibung.docx  Main Interface.rtf  SettingsAndNavigationBarInterface.rtf  Spezifikation-team-x.bak  Spezifikation-team-x.docx  Statistik Beschreibung.docx  class.drawio  use_case.drawio  ~$atistik Beschreibung.docx  ~$ttingsAndNavigationBarInterface.rtf
Statistik/: new_window.html.txt  statistik.html  statistik.js  styles.css
TimeTracker/: cypress.config.js  manifest.json  package-lock.json  package.json  serviceWorker.js  styles.css  test-results.xml
TimeTracker/cypress/e2e/: main.spec.cy.js  timetrack.spec.cy.js
TimeTracker/html/: apv.html  apz.html  backup-server.html  heatmap.html  main.html  progressBar.html  settings.html  statistic.html  subject.html
TimeTracker/scripts/: apv.js  apz.js  backupServer.js  global.js  heatmap.js  main.js  progressBar.js  settings.js  statistic.js  subject.js
