[package]
name = "backup_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0"
env_logger = "0.10.1"
log = "0.4.20"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
actix-web-httpauth = "0.8.1"
mime = "0.3.17"